# pythonapp

./: .breakpoints  emoji_match.py  emoji_match2.py  emoji_match4 .py  languageapp_v1.py  languageapp_v10.py  languageapp_v11.py  languageapp_v12.py  languageapp_v13.py  languageapp_v14.py  languageapp_v15.py  languageapp_v16.py  languageapp_v17.py  languageapp_v18.py  languageapp_v2.py  languageapp_v3.py  languageapp_v4.py  languageapp_v5.py  languageapp_v6.py  languageapp_v7.py  languageapp_v8.py  languageapp_v9.py  main.py  pyproject.toml
practiceapp/: emoji_match3.py
text_files/colours/: french_colours.txt  spanish_colours.txt  tereo_colours.txt
text_files/fruits/: english_fruits.txt  french_fruits.txt  spanish_fruits.txt  tereo_fruits.txt
text_files/numbers/: english_numbers.txt  french_numbers.txt  spanish_numbers.txt  tereo_numbers.txt
textfiles/: english_colours.txt  french_colours.txt
