[tool.poetry]
name = "repl-nix-pythonapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_pythonapp"}]

[tool.poetry.dependencies]
python = "^3.10"
guizero = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
